fix(build): use method of `List` instead of specific for `LinkedList`